// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableDisplayUtils addQueryInfo 1`] = `<div />`;

exports[`TableDisplayUtils addQueryInfo 2`] = `
<OverlayTrigger
  overlay={
    <Tooltip
      id="baselineQueryInfo"
      placement="right"
    >
      query: 'BQ', filters: 'QF' ([100] team possessions)
    </Tooltip>
  }
  placement="auto"
>
  <u
    style={
      Object {
        "textDecorationStyle": "dotted",
      }
    }
  >
    <div />
  </u>
</OverlayTrigger>
`;

exports[`TableDisplayUtils addQueryInfo 3`] = `
<OverlayTrigger
  overlay={
    <Tooltip
      id="onQueryInfo"
      placement="right"
    >
      BASE:[query: 'BQ', filters: 'QF'] ([100] team possessions)
    </Tooltip>
  }
  placement="auto"
>
  <u
    style={
      Object {
        "textDecorationStyle": "dotted",
      }
    }
  >
    <div />
  </u>
</OverlayTrigger>
`;

exports[`TableDisplayUtils addQueryInfo 4`] = `
<OverlayTrigger
  overlay={
    <Tooltip
      id="onQueryInfo"
      placement="right"
    >
      query: 'OQ' ([100] team possessions)
    </Tooltip>
  }
  placement="auto"
>
  <u
    style={
      Object {
        "textDecorationStyle": "dotted",
      }
    }
  >
    <div />
  </u>
</OverlayTrigger>
`;

exports[`TableDisplayUtils addQueryInfo 5`] = `
<OverlayTrigger
  overlay={
    <Tooltip
      id="onQueryInfo"
      placement="right"
    >
      filters: 'OF' AND BASE:[query: 'BQ']
    </Tooltip>
  }
  placement="auto"
>
  <u
    style={
      Object {
        "textDecorationStyle": "dotted",
      }
    }
  >
    <div />
  </u>
</OverlayTrigger>
`;

exports[`TableDisplayUtils addQueryInfo 6`] = `
<OverlayTrigger
  overlay={
    <Tooltip
      id="offQueryInfo"
      placement="right"
    >
      query: 'OffQ', filters: 'OffF' ([200] team possessions)
    </Tooltip>
  }
  placement="auto"
>
  <u
    style={
      Object {
        "textDecorationStyle": "dotted",
      }
    }
  >
    <div />
  </u>
</OverlayTrigger>
`;

exports[`TableDisplayUtils addQueryInfo 7`] = `
<OverlayTrigger
  overlay={
    <Tooltip
      id="offQueryInfo"
      placement="right"
    >
      query: 'OffQ' AND BASE:[filters: 'QF']
    </Tooltip>
  }
  placement="auto"
>
  <u
    style={
      Object {
        "textDecorationStyle": "dotted",
      }
    }
  >
    <div />
  </u>
</OverlayTrigger>
`;

exports[`TableDisplayUtils buildDecoratedLineup - buildTooltipTexts 1`] = `
<span>
  <div
    className="tooltip bs-tooltip-right"
    id="p1_p2_p3_p4_p5_info"
    role="tooltip"
    x-placement="right"
  >
    <div
      className="arrow"
    />
    <div
      className="tooltip-inner"
    >
      <span>
        player1: p-PG
        <br />
      </span>
      <span>
        ORtg 101 on 10%, DRB 5%
        <br />
      </span>
      <span>
        
        <br />
      </span>
      <span>
        player2: CG
        <br />
      </span>
      <span>
        ORtg 102 on 15%, DRB 10%
        <br />
      </span>
      <span>
        
        <br />
      </span>
      <span>
        player3: WG
        <br />
      </span>
      <span>
        ORtg 103 on 20%, DRB 15%
        <br />
      </span>
      <span>
        
        <br />
      </span>
      <span>
        player4: WF
        <br />
      </span>
      <span>
        ORtg 104 on 25%, DRB 20%
        <br />
      </span>
      <span>
        
        <br />
      </span>
      <span>
        player5: PF/C
        <br />
      </span>
      <span>
        ORtg 105 on 30%, DRB 25%
        <br />
      </span>
      <span>
        
        <br />
      </span>
    </div>
  </div>
</span>
`;

exports[`TableDisplayUtils buildDecoratedLineup - decorated version 1`] = `
<span>
  <div>
    <div>
      <span>
        <span
          style={
            Object {
              "whiteSpace": "nowrap",
            }
          }
        >
          <span
            className="badge badge-light"
            style={
              Object {
                "backgroundColor": "#f2f9f280",
              }
            }
          >
            <span
              style={
                Object {
                  "fontSize": "small",
                  "fontWeight": 100,
                }
              }
            >
              p1
            </span>
          </span>
          <span
            style={Object {}}
          >
            <sup
              className="megaThreePointBadge"
            />
            <sup
              className="assistBadge"
            />
          </span>
        </span>
        <span
          style={
            Object {
              "opacity": 0,
            }
          }
        >
           ; 
        </span>
      </span>
      <span>
        <span
          style={
            Object {
              "whiteSpace": "nowrap",
            }
          }
        >
          <span
            className="badge badge-light"
            style={
              Object {
                "backgroundColor": "#e5f2e580",
              }
            }
          >
            <span
              style={
                Object {
                  "fontSize": "small",
                  "fontWeight": 300,
                }
              }
            >
              p2
            </span>
          </span>
          <span
            style={Object {}}
          >
            <sub
              className="megaFreeThrowBadge"
            />
            <sup
              className="megaAssistBadge"
            />
          </span>
        </span>
        <span
          style={
            Object {
              "opacity": 0,
            }
          }
        >
           ; 
        </span>
      </span>
      <span>
        <span
          style={
            Object {
              "whiteSpace": "nowrap",
            }
          }
        >
          <span
            className="badge badge-light"
            style={
              Object {
                "backgroundColor": "#d9ecd980",
              }
            }
          >
            <span
              style={
                Object {
                  "fontSize": "small",
                  "fontWeight": 500,
                }
              }
            >
              p3
            </span>
          </span>
          <span
            style={Object {}}
          >
            <sup
              className="megaTwoPointBadge"
            />
          </span>
        </span>
        <span
          style={
            Object {
              "opacity": 0,
            }
          }
        >
           ; 
        </span>
      </span>
      <span>
        <span
          style={
            Object {
              "whiteSpace": "nowrap",
            }
          }
        >
          <span
            className="badge badge-light"
            style={
              Object {
                "backgroundColor": "#cce6cc80",
              }
            }
          >
            <span
              style={
                Object {
                  "fontSize": "small",
                  "fontWeight": 600,
                }
              }
            >
              p4
            </span>
          </span>
          <span
            style={Object {}}
          >
            <sup
              className="twoPointBadge"
            />
            <sub
              className="freeThrowBadge"
            />
          </span>
        </span>
        <span
          style={
            Object {
              "opacity": 0,
            }
          }
        >
           ; 
        </span>
      </span>
      <span>
        <span
          style={
            Object {
              "whiteSpace": "nowrap",
            }
          }
        >
          <span
            className="badge badge-light"
            style={
              Object {
                "backgroundColor": "#bfdfbf80",
              }
            }
          >
            <span
              style={
                Object {
                  "fontSize": "small",
                  "fontWeight": 700,
                }
              }
            >
              p5
            </span>
          </span>
          <span
            style={Object {}}
          >
            <sup
              className="threePointBadge"
            />
            <sub
              className="freeThrowBadge"
            />
            <sup
              className="assistBadge"
            />
          </span>
        </span>
      </span>
    </div>
  </div>
</span>
`;

exports[`TableDisplayUtils buildDecoratedLineup - plain version 1`] = `
<span>
  <div>
    <span>
      <b>
        p1 / p2 / p3 / p4 / p5
      </b>
    </span>
  </div>
</span>
`;

exports[`TableDisplayUtils injectPlayTypeInfo - lineups 1`] = `
{
  def_2pmidr: Object {
    "extraInfo": <span>
      23% assisted
    </span>,
    "value": 0.2997032640949555,
  }

  def_2primr: Object {
    "extraInfo": <span>
      45% assisted
    </span>,
    "value": 0.3056379821958457,
  }

  def_3pr: Object {
    "extraInfo": <span>
      88% assisted
    </span>,
    "value": 0.39465875370919884,
  }

  def_assist: Object {
    "extraInfo": <span>
      Assist breakdown:
      <li>
        52
        % for 3P
      </li>
      <li>
        10
        % for mid-range
      </li>
      <li>
        37
        % at the rim
      </li>
    </span>,
    "value": 0.5275590551181102,
  }

  def_ftr: Object {
    "extraInfo": <span>
      FT: 
      74.7
      %
    </span>,
    "value": 0.27002967359050445,
  }

  def_ppp: Object {
    "extraInfo": <span>
      Play category breakdown:
      <li>
        20.6
        % transition:
        <br />
        +
        6.9
         pts/100
      </li>
      <li>
        8.3
        % scramble:
        <br />
        +
        9.3
         pts/100
      </li>
    </span>,
    "value": 93.29896907216495,
  }

  off_2pmidr: Object {
    "extraInfo": <span>
      21% assisted
    </span>,
    "value": 0.17956656346749225,
  }

  off_2primr: Object {
    "extraInfo": <span>
      43% assisted
    </span>,
    "value": 0.3653250773993808,
  }

  off_3pr: Object {
    "extraInfo": <span>
      78% assisted
    </span>,
    "value": 0.4551083591331269,
  }

  off_assist: Object {
    "extraInfo": <span>
      Assist breakdown:
      <li>
        47
        % for 3P
      </li>
      <li>
        4
        % for mid-range
      </li>
      <li>
        49
        % at the rim
      </li>
    </span>,
    "value": 0.5211267605633803,
  }

  off_ftr: Object {
    "extraInfo": <span>
      FT: 
      76.6
      %
    </span>,
    "value": 0.5696594427244582,
  }

  off_poss: Object {
    "extraInfo": <span>
      71.7
       poss/g
    </span>,
    "value": 401,
  }

  off_ppp: Object {
    "extraInfo": <span>
      Play category breakdown:
      <li>
        25.3
        % transition:
        <br />
        +
        16.6
         pts/100
      </li>
      <li>
        9.6
        % scramble:
        <br />
        +
        8.1
         pts/100
      </li>
    </span>,
    "value": 117.2069825436409,
  }}
`;

exports[`TableDisplayUtils injectPlayTypeInfo - players (!expanded) 1`] = `
{
  def_2pmidr: <small
    style={
      Object {
        "textShadow": "0px 0px 15px #add8e6,0px 0px 15px #add8e6,0px 0px 15px #add8e6",
      }
    }
  >
    <i>
      0
      %
    </i>
  </small>

  def_2primr: <small
    style={
      Object {
        "textShadow": "0px 0px 15px #e0f0f5,0px 0px 15px #e0f0f5,0px 0px 15px #e0f0f5",
      }
    }
  >
    <i>
      26
      %
    </i>
  </small>

  def_3pr: <small
    style={
      Object {
        "textShadow": "0px 0px 15px #ffa500,0px 0px 15px #ffa500,0px 0px 15px #ffa500",
      }
    }
  >
    <i>
      63
      %
    </i>
  </small>

  off_2pmidr: Object {
    "extraInfo": <span>
      0% assisted
    </span>,
    "value": 0.18258426966292135,
  }

  off_2primr: Object {
    "extraInfo": <span>
      26% assisted
    </span>,
    "value": 0.32865168539325845,
  }

  off_3pr: Object {
    "extraInfo": <span>
      63% assisted
    </span>,
    "value": 0.4887640449438202,
  }

  off_assist: Object {
    "extraInfo": <span>
      Assist breakdown:
      <li>
        48
        % for 3P
      </li>
      <li>
        7
        % for mid-range
      </li>
      <li>
        46
        % at the rim
      </li>
    </span>,
    "value": 0.2916666666666667,
  }

  off_ftr: Object {
    "extraInfo": <span>
      FT: 
      81.1
      %
    </span>,
    "value": 0.5955056179775281,
  }

  off_team_poss: Object {
    "extraInfo": <span>
      80.1
       poss/g
    </span>,
    "value": 1802,
  }}
`;

exports[`TableDisplayUtils injectPlayTypeInfo - players (expanded) 1`] = `
{
  def_2pmidr: <small
    style={
      Object {
        "textShadow": "0px 0px 15px #add8e6,0px 0px 15px #add8e6,0px 0px 15px #add8e6",
      }
    }
  >
    <i>
      0
      %
    </i>
  </small>

  def_2primr: <small
    style={
      Object {
        "textShadow": "0px 0px 15px #e0f0f5,0px 0px 15px #e0f0f5,0px 0px 15px #e0f0f5",
      }
    }
  >
    <i>
      26
      %
    </i>
  </small>

  def_3pr: <small
    style={
      Object {
        "textShadow": "0px 0px 15px #ffa500,0px 0px 15px #ffa500,0px 0px 15px #ffa500",
      }
    }
  >
    <i>
      63
      %
    </i>
  </small>

  off_assist: Object {
    "extraInfo": <span>
      Assist breakdown:
      <li>
        48
        % for 3P
      </li>
      <li>
        7
        % for mid-range
      </li>
      <li>
        46
        % at the rim
      </li>
    </span>,
    "value": 0.2916666666666667,
  }

  off_ftr: Object {
    "extraInfo": <span>
      FT: 
      81.1
      %
    </span>,
    "value": 0.5955056179775281,
  }

  off_team_poss: Object {
    "extraInfo": <span>
      80.1
       poss/g
    </span>,
    "value": 1802,
  }}
`;
